--- a/negwm/.config/i3/config
+++ b/negwm/.config/i3/config
@@ -66,18 +66,12 @@ for_window $circle-vid move workspace $gfx,focus
 for_window $circle-vm move workspace $vm,focus
 for_window $circle-web move workspace $web,focus
 for_window [class=".*"] title_format "<span foreground='#395573'> >_ </span> %title", border pixel 2
-for_window [class="^(Gcolor3|rdesktop|openssh-askpass)$"] floating enable
 for_window [class="^(inkscape|gimp)$"] move workspace $draw
-for_window [class="(?i)(?:steam|lutris)"] floating enable
-for_window [title="(?i)(?:copying|deleting|moving)"] floating enable
-for_window [class="steam_app_.*"] floating enable
+for_window [class="(?i)(?:steam|qt5ct|gcolor3|rdesktop|openssh-askpass|pavucontrol-qt|lutris|steam_app_.*|mpv)"] floating enable
+for_window [title="(?i)(?:copying|alsamixer|deleting|moving|File Transfer.*)"] floating enable
 for_window [instance="^(gpartedbin|recoll)$"] move workspace $sys, floating enable, focus
 for_window [title="Firefox — Sharing Indicator"] border pixel 1, sticky enable, move position 20 ppt -5 px
-for_window [title="alsamixer"] floating enable border pixel 1
-for_window [title="File Transfer*"] floating enable
 for_window [title="i3_help"] floating enable sticky enable border normal
-for_window [class="pavucontrol-qt"] floating enable border normal
-for_window [class="qt5ct"] floating enable sticky enable border normal
 no_focus [class="zoom" instance="zoom" title="^zoom$"]
 no_focus [title="Firefox — Sharing Indicator"]
 no_focus [window_type="splash"]
