--- a/sys/.config/systemd/user/xrdb.service
+++ b/sys/.config/systemd/user/xrdb.service
@@ -3,4 +3,4 @@ Description=Merge xrdb settings
 PartOf=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/xrdb -merge %h/.Xresources
+ExecStart=/usr/bin/xrdb -merge "$XDG_CONFIG_HOME/X11/xresources"
