--- a/music/.config/beets/config.yaml
+++ b/music/.config/beets/config.yaml
@@ -33,13 +33,13 @@ color: yes
 ui:
   color: yes
   colors:
-    text_success: green
-    text_warning: yellow
-    text_error: red
-    text_highlight: red
-    text_highlight_minor: lightgray
-    action_default: turquoise
-    action: blue
+    text_success:         '40'
+    text_warning:         '137'
+    text_error:           '160'
+    text_highlight:       '106'
+    text_highlight_minor: '108'
+    action_default:       '197'
+    action:               '210'
 
 per_disc_numbering: no
 original_date: yes
@@ -64,11 +64,11 @@ match:
 
 fetchart:
   auto: yes
-  cautious: true
   cover_names: front back
-  sources: amazon *
+  sources: filesystem coverart itunes amazon albumart wikipedia google
 
 embedart:
+  auto: yes
   remove_art_file: no
 
 lastfm:
@@ -80,6 +80,5 @@ lyrics:
 bbq:
   fields: artist title album
 
-musicbrainz:
-  user: you
-  pass: seekrit
+include:
+  - ~/.config/MusicBrainz/auth.yaml
