[tmux] fix ressurect path

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'laktak/extrakto'
 set -g @continuum-restore 'on'
 # Plugin settings
+set -g @resurrect-dir '~/.config/tmux/resurrect/'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @prefix_highlight_bg 'colour236'
 set -g @extrakto_key 'Enter'
