[tmux] transparent bg for statusline

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -100,8 +100,8 @@ set -g status-left ""
 set -g status-justify left # center align window list
 set-option -g status-position bottom
 set-option -g status-style fg=white,bg=default,default
-set -g window-status-format "#[bg=#040408]#[fg=#303030] #I#F #[fg=colour232]❯> #[fg=#242424]#W\ \ #[bg=default]"
-set -g window-status-current-format "#[bg=#080812] #I#{?window_flags,#F, } #[fg=colour24]❯> #[fg=default]#W\ \ #[bg=default]"
+set -g window-status-format "#[bg=#default]#[fg=#303030] #I#F #[fg=colour232]❯> #[fg=#242424]#W\ \ #[bg=default]"
+set -g window-status-current-format "#[bg=default] #I#{?window_flags,#F, } #[fg=colour24]❯> #[fg=default]#W\ \ #[bg=default]"
 set-option -qg status-style "fg=#899CA1"
 set-window-option -qg window-status-style "fg=#617287"
 set-window-option -qg window-status-activity-style "fg=#ff5858"
