[tmux] better thumbs support

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -67,6 +67,7 @@ bind -T copy-mode-vi 'Escape' send -X cancel
 bind -T copy-mode-vi 'C-c' send -X cancel
 
 bind -n M-n new-window
+bind -n M-i thumbs-pick
 bind Tab copy-mode
 
 # ctrl+left/right cycles thru windows
