[tmux] better thumbs settings

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -67,7 +67,14 @@ bind -T copy-mode-vi 'Escape' send -X cancel
 bind -T copy-mode-vi 'C-c' send -X cancel
 
 bind -n M-n new-window
-bind -n M-i thumbs-pick
+bind -n M-m thumbs-pick
+set -g @thumbs-alphabet qwerty-left-hand
+set -g @thumbs-unique enabled
+set -g @thumbs-position off_left
+set -g @thumbs-command 'echo -n {} | xsel'
+set -g @thumbs-fg-color '#005f87'
+set -g @thumbs-hint-fg-color  '#8c142b'
+set -g @thumbs-contrast 1
 bind Tab copy-mode
 
 # ctrl+left/right cycles thru windows
