[picom] better blur

--- a/negwm/.config/picom/picom.conf
+++ b/negwm/.config/picom/picom.conf
@@ -34,15 +34,15 @@ focus-exclude: [
 ];
 blur-background-exclude: [
     "class_g = 'nwim'",
-    "class_g = 'slop'",
-    "class_g = 'term'",
     "class_i = 'nwim'",
     "class_i = 'term'",
+    "class_g = 'slop'",
+    "class_g = 'term'",
     "window_type = 'desktop'",
     "window_type = 'dnd'",
 ];
-# blur: { method = "dual_kawase"; blur-strengh=7; };
-blur: { method = "gaussian"; size = 30; deviation = 128; };
+blur: { method = "dual_kawase"; blur-strengh=7; };
+# blur: { method = "gaussian"; size = 30; deviation = 128; };
 opacity-rule: [
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "80:class_g = 'i3-frame'",
@@ -51,7 +51,6 @@ opacity-rule: [
     "100:fullscreen",
     "100:name = 'Zoom Meeting'",
     "100:name = 'zoom_linux_float_video_window'",
-    "100:class_g = 'mpv'",
 ];
 shadow: true;
 shadow-radius: +9.0;
