[picom] cleanup, better performance

--- a/negwm/.config/picom/picom.conf
+++ b/negwm/.config/picom/picom.conf
@@ -14,7 +14,6 @@ glx-swap-method: 1;
 transparent-clipping: false;
 xrender-sync-fence: true;
 use-damage = true;
-refresh-rate: 0;
 wintypes: {
     dock: { opacity: 1.0; shadow: false; full-shadow: false; };
     menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
@@ -41,7 +40,11 @@ blur-background-exclude: [
     "window_type = 'desktop'",
     "window_type = 'dnd'",
 ];
-blur: { method = "dual_kawase"; blur-strengh=7; };
+blur: {
+    method = "dual_kawase";
+    blur-strengh=7;
+    blur-background-fixed=true;
+};
 # blur: { method = "gaussian"; size = 30; deviation = 128; };
 opacity-rule: [
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
