[picom] revert mpv opacity rule

--- a/negwm/.config/picom/picom.conf
+++ b/negwm/.config/picom/picom.conf
@@ -54,6 +54,7 @@ opacity-rule: [
     "100:fullscreen",
     "100:name = 'Zoom Meeting'",
     "100:name = 'zoom_linux_float_video_window'",
+    "100:class_g = 'mpv'",
 ];
 shadow: true;
 shadow-radius: +9.0;
