[kitty] update colorscheme

--- a/negwm/.config/kitty/kitty.conf
+++ b/negwm/.config/kitty/kitty.conf
@@ -253,29 +253,29 @@ color202 #FF5F01
 color208 #FFAA01
 color209 #FFD37C
 color213 #EBC3FF
-color232 #000508
-color233 #010C12
-color234 #04141C
-color235 #071B26
-color236 #0C2430
-color237 #102C3A
-color238 #163444
-color239 #1C3D4E
-color240 #234758
-color241 #2B5062
-color242 #34596C
-color243 #3F6476
-color244 #496E80
-color245 #54788A
-color246 #608394
-color247 #6D8E9E
-color248 #7C99A8
-color249 #8DA6B2
-color250 #95AFBC
-color251 #A4BBC6
-color252 #B7C8D0
-color253 #BFCAD0
-color254 #DBE1E4
+color232 #000408
+color233 #010912
+color234 #040f1c
+color235 #071526
+color236 #0c1c30
+color237 #10233a
+color238 #162b44
+color239 #1c334e
+color240 #233b58
+color241 #2b4462
+color242 #344d6c
+color243 #3f5876
+color244 #496280
+color245 #546c8a
+color246 #607794
+color247 #6d839e
+color248 #7c90a8
+color249 #8d9eb2
+color250 #95a7bc
+color251 #a4b3c6
+color252 #b7c2d0
+color253 #bfc8d0
+color254 #dbdfe4
 color255 #EEEEEE
 
 mark1_foreground black
