--- a/negwm/.config/kitty/kitty.conf
+++ b/negwm/.config/kitty/kitty.conf
@@ -23,6 +23,7 @@ cursor_stop_blinking_after 15.0
 scrollback_lines 0
 scrollback_pager_history_size 0
 scrollback_fill_enlarged_window no
+scrollback_pager /usr/local/bin/nvim  -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "silent write /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 1.0
 
