--- a/negwm/.config/kitty/kitty.conf
+++ b/negwm/.config/kitty/kitty.conf
@@ -21,7 +21,7 @@ cursor_blink_interval 0
 cursor_stop_blinking_after 15.0
 
 scrollback_fill_enlarged_window no
-scrollback_pager ~/.config/kitty/pager.sh 'INPUT_LINE_NUMBER' 'CURSOR_LINE' 'CURSOR_COLUMN'
+scrollback_pager nvim -u NONE -c "set laststatus=0 clipboard=unnamedplus termguicolors" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(sed -e 's/\\^[]8;;file:[^\\\\]*\\\\//g' /tmp/kitty_scrollback_buffer)\"; rm -f /tmp/kitty_scrollback_buffer; sleep 1000"
 
 wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 1.0
