--- a/negwm/.config/kitty/kitty.conf
+++ b/negwm/.config/kitty/kitty.conf
@@ -20,6 +20,7 @@ cursor_underline_thickness 2.0
 cursor_blink_interval 0
 cursor_stop_blinking_after 15.0
 
+map kitty_mod+g     no_op
 scrollback_fill_enlarged_window no
 scrollback_pager nvim -u NONE -c "set laststatus=0 clipboard=unnamedplus termguicolors" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(sed -e 's/\\^[]8;;file:[^\\\\]*\\\\//g' /tmp/kitty_scrollback_buffer)\"; rm -f /tmp/kitty_scrollback_buffer; sleep 1000"
 
